--- a/HTML ir CSS/05 paskaita - 02.20 - Multimedijos elementai/index.html
+++ b/HTML ir CSS/05 paskaita - 02.20 - Multimedijos elementai/index.html
@@ -9,46 +9,115 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <h1>Klaviatūros komandos VS code arba PC</h1>
-  <ol>
-    <li>CTRL C - kopijuoja pažymėtą informaciją</li>
-    <li>CTRL V - įklijuoja kopijuotą informaciją</li>
-    <li>CTRL X - iškerpa pažymėtą informaciją</li>
-    <li>CTRL ENTER - naujos eilutės sukūrimas apačioj</li>
-    <li>CTRL SHIFT ENTER - naujos eilutės sukūrimas viršuj</li>
-    <li>CTRL S - saugoti failą</li>
-    <li>CTRL Z - atšaukti paskutinį veiksmą/us</li>
-    <li>CTRL SHIFT Z / CTRL Y - atšaukia CTRL Z komandą/as</li>
-    <li>CTRL D - parenka sekantį vienodą pažymėtą elementą</li>
-    <li>CTRL F2 - parenka visus vienodus pažymėtus elementus</li>
-    <li>CTRL A - pažymėti viską</li>
-    <li>CTRL F - atsidaro paieškos eilutę</li>
-    <li>CTRL SHIFT F - atidaro paieškos įrankį (per visus failus)</li>
-    <li>ALT MouseClick - Pažymi vietas, kur kuriami papildomi kursoriai</li>
-    <li>ALT arrowUp/arrowDown - perkelia pažymėtą/as eilutę/eilutes aukštyn/žemyn</li>
-    <li>ALT SHIFT arrowUp/arrowDown - kopijuoja pažymėtą/as eilutę/eilutes aukštyn/žemyn</li>
-    <li>CTRL / - Sukuria komentarą pažymėtose eilutėse</li>
-    <li>ALT SHIFT F - Automatinis formatavimas</li>
-    <li>CTRL -> / CTRL <- - kursorius peršoka per visą žodį</li>
-    <li>FN -> / FN <- - kursorius peršoka per visą eilutę</li>
-    <li>ALT TAB - vaikščioti per atidarytus langus kompiuteryje</li>
-    <li>WINDOW TAB - vaikščioti tarp virtualių ekranų kompiuteryje</li>
-    <li>ALT F4 - išjungia atidarytą programą</li>
-    <li>CTRL F4/W - išjungia atidarytą langą/tab'ą (programos)</li>
-    <li>CTRL SHIFT ESC - atidaro task manager langą</li>
-    <li>TAB - tabuliuoti kodą į dešinę pusę</li>
-    <li>SHIFT TAB - tabuliuoti kodą į kairę pusę</li>
-    <li>WINDOW L - užrakina vartotojo paskyrą (window)</li>
-    <li>WINDOW D - atidaro desktop / viską nuleidžia</li>
-    <li>CTRL T - sukuria naują tab'ą</li>
-    <li>CTRL TAB/SHIFT TAB - vaikšto per atidarytus tab'us</li>
-    <li>CTRL SHIFT T - atidaro paskutinį uždarytą langą</li>
-    <li>WINDOW SHIFT S - dalies ekrano iškirpimas ir saugojimas</li>
-    <li>CTRL mouseScroll - artina / tolina naršyklės langą</li>
-    <li>HOME / END - nukelia į eilutės pradžią/galą</li>
-    <li>CTRL HOME / CTRL END - nukelia į failo pradžią/galą</li>
-    <li>WINDOW E - atidaro failų naršyklę (File Explorer)</li>
-    <li>WINDOW R - atidaro run'ą (procesų paleidimo langą)</li>
-  </ol>
+  <header></header>
+  <main>
+    <section class="hide"> <!-- klaviatūros komandos -->
+      <h1>Klaviatūros komandos VS code arba PC</h1>
+      <ol>
+        <li>CTRL C - kopijuoja pažymėtą informaciją</li>
+        <li>CTRL V - įklijuoja kopijuotą informaciją</li>
+        <li>CTRL X - iškerpa pažymėtą informaciją</li>
+        <li>CTRL ENTER - naujos eilutės sukūrimas apačioj</li>
+        <li>CTRL SHIFT ENTER - naujos eilutės sukūrimas viršuj</li>
+        <li>CTRL S - saugoti failą</li>
+        <li>CTRL Z - atšaukti paskutinį veiksmą/us</li>
+        <li>CTRL SHIFT Z / CTRL Y - atšaukia CTRL Z komandą/as</li>
+        <li>CTRL D - parenka sekantį vienodą pažymėtą elementą</li>
+        <li>CTRL F2 - parenka visus vienodus pažymėtus elementus</li>
+        <li>CTRL A - pažymėti viską</li>
+        <li>CTRL F - atsidaro paieškos eilutę</li>
+        <li>CTRL SHIFT F - atidaro paieškos įrankį (per visus failus)</li>
+        <li>ALT MouseClick - Pažymi vietas, kur kuriami papildomi kursoriai</li>
+        <li>ALT arrowUp/arrowDown - perkelia pažymėtą/as eilutę/eilutes aukštyn/žemyn</li>
+        <li>ALT SHIFT arrowUp/arrowDown - kopijuoja pažymėtą/as eilutę/eilutes aukštyn/žemyn</li>
+        <li>CTRL / - Sukuria komentarą pažymėtose eilutėse</li>
+        <li>ALT SHIFT F - Automatinis formatavimas</li>
+        <li>CTRL -> / CTRL <- - kursorius peršoka per visą žodį</li>
+        <li>FN -> / FN <- - kursorius peršoka per visą eilutę</li>
+        <li>ALT TAB - vaikščioti per atidarytus langus kompiuteryje</li>
+        <li>WINDOW TAB - vaikščioti tarp virtualių ekranų kompiuteryje</li>
+        <li>ALT F4 - išjungia atidarytą programą</li>
+        <li>CTRL F4/W - išjungia atidarytą langą/tab'ą (programos)</li>
+        <li>CTRL SHIFT ESC - atidaro task manager langą</li>
+        <li>TAB - tabuliuoti kodą į dešinę pusę</li>
+        <li>SHIFT TAB - tabuliuoti kodą į kairę pusę</li>
+        <li>WINDOW L - užrakina vartotojo paskyrą (window)</li>
+        <li>WINDOW D - atidaro desktop / viską nuleidžia</li>
+        <li>CTRL T - sukuria naują tab'ą</li>
+        <li>CTRL TAB/SHIFT TAB - vaikšto per atidarytus tab'us</li>
+        <li>CTRL SHIFT T - atidaro paskutinį uždarytą langą</li>
+        <li>WINDOW SHIFT S - dalies ekrano iškirpimas ir saugojimas</li>
+        <li>CTRL mouseScroll - artina / tolina naršyklės langą</li>
+        <li>HOME / END - nukelia į eilutės pradžią/galą</li>
+        <li>CTRL HOME / CTRL END - nukelia į failo pradžią/galą</li>
+        <li>WINDOW E - atidaro failų naršyklę (File Explorer)</li>
+        <li>WINDOW R - atidaro run'ą (procesų paleidimo langą)</li>
+      </ol>
+    </section>
+    <section class="hide"> <!-- kartojimas -->
+      <h1>Temos</h1>
+      <ol>
+        <li>HTML Pagrindai</li>
+        <li>CSS Pagrindai</li>
+        <li>Naršyklės įrankiai</li>
+        <li>CSS niuansai</li>
+        <li>Box Model</li>
+      </ol>
+      <div id="HTML_Ivadas">
+        <h1>HTML Įvadas</h1>
+        <p>HTML - Hyper Text Markup Language</p>
+        <p>
+          HTML struktūra; tag'us; tag'ų sudėtį.
+        </p>
+      </div>
+      <div id="CSS_Ivadas">
+        <h1>CSS Įvadas</h1>
+        <p>CSS - Cascading Style Sheets</p>
+        <p>
+          3 CSS rašymo būdai; Selektorius: tag'o, klasės, id; basic styles; pavadinimų rašymo būdai: camelCase/snake_case/kebab-case
+        </p>
+      </div>
+      <div id="NasyklesIrankiai">
+        <h1>Naršyklės įrankiai</h1>
+        <p>Developer tools</p>
+        <p>Extensions: JSON Formatter; React Developer Tools</p>
+      </div>
+      <div id="CSS_Niuansai">
+        <h1>CSS Niuansai</h1>
+        <p>
+          CSS prioritetai: Eiliškumas; Selector Specificity; Paveldimumas; Default Styles;
+        </p>
+      </div>
+      <div id="BoxModel">
+        <h1>Box Model</h1>
+        <p>
+          Content; Padding; Border; Margin; Position;
+        </p>
+      </div>
+    </section>
+    <section class=""> <!-- Multimedijos elementai -->
+      <h1>Multimedijos elementai</h1>
+      <div >
+        <h2>Images</h2>
+        <img src="./images/atributas.PNG" alt="Paveiksliukas nusakantis kas yra tag'o atributas">
+        <img class="paveikslelioDydisS paveikslelioDydisM" src="https://media.istockphoto.com/id/156711869/photo/british-kitten-with-mittens.jpg?s=612x612&w=0&k=20&c=5_DrBCSsa3tts5YkR9-xLhBfaPhHV_3pzzCk9Yplvdg=" alt="kitten with mittens" >
+      </div>
+      <div>
+        <h2>Videos</h2>
+        <video controls>
+          <source src="">
+          <source src="">
+          <source src="">
+        </video>
+        <video src="" controls></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sTeoEFzVNSc?start=300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <div>
+        <h2>Audios</h2>
+
+      </div>
+    </section>
+  </main>
+  <footer></footer>
 </body>
 </html>
