05 paskaita - multimedijos užbaigimas

--- a/HTML ir CSS/05 paskaita - 02.20 - Multimedijos elementai/index.html
+++ b/HTML ir CSS/05 paskaita - 02.20 - Multimedijos elementai/index.html
@@ -11,7 +11,7 @@
 <body>
   <header></header>
   <main>
-    <section class="hide"> <!-- klaviatūros komandos -->
+    <section class=""> <!-- klaviatūros komandos -->
       <h1>Klaviatūros komandos VS code arba PC</h1>
       <ol>
         <li>CTRL C - kopijuoja pažymėtą informaciją</li>
@@ -54,7 +54,7 @@
         <li>WINDOW R - atidaro run'ą (procesų paleidimo langą)</li>
       </ol>
     </section>
-    <section class="hide"> <!-- kartojimas -->
+    <section class=""> <!-- kartojimas -->
       <h1>Temos</h1>
       <ol>
         <li>HTML Pagrindai</li>
@@ -97,10 +97,10 @@
     </section>
     <section class=""> <!-- Multimedijos elementai -->
       <h1>Multimedijos elementai</h1>
-      <div >
+      <div>
         <h2>Images</h2>
         <img src="./images/atributas.PNG" alt="Paveiksliukas nusakantis kas yra tag'o atributas">
-        <img class="paveikslelioDydisS paveikslelioDydisM" src="https://media.istockphoto.com/id/156711869/photo/british-kitten-with-mittens.jpg?s=612x612&w=0&k=20&c=5_DrBCSsa3tts5YkR9-xLhBfaPhHV_3pzzCk9Yplvdg=" alt="kitten with mittens" >
+        <img class="paveikslelioDydisS paveikslelioDydisM" src="https://media.istockphoto.com/id/156711869/photo/british-kitten-with-mittens.jpg?s=612x612&w=0&k=20&c=5_DrBCSsa3tts5YkR9-xLhBfaPhHV_3pzzCk9Yplvdg=" alt="kitten with mittens">
       </div>
       <div>
         <h2>Videos</h2>
@@ -110,11 +110,20 @@
           <source src="">
         </video>
         <video src="" controls></video>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/sTeoEFzVNSc?start=300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sTeoEFzVNSc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
       <div>
         <h2>Audios</h2>
-
+        <audio class="audioTryOut" controls>
+          <source src="./media/Miley Cyrus - Flowers (Official Video).mp3">
+          <source>
+          <source>
+        </audio>
+        <audio src="./media/Miley Cyrus - Flowers (Official Video).mp3" muted controls></audio>
+      </div>
+      <div>
+        <h2>Maps</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1147.0646543500736!2d23.944315474769887!3d54.90065259938488!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2slt!4v1676962850966!5m2!1sen!2slt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
   </main>
