06 paskaita - lentelės ir extra psl

--- a/HTML ir CSS/05 paskaita - 02.20 - Multimedijos elementai/index.html
+++ b/HTML ir CSS/05 paskaita - 02.20 - Multimedijos elementai/index.html
@@ -29,7 +29,7 @@
         <li>CTRL SHIFT F - atidaro paieškos įrankį (per visus failus)</li>
         <li>ALT MouseClick - Pažymi vietas, kur kuriami papildomi kursoriai</li>
         <li>ALT arrowUp/arrowDown - perkelia pažymėtą/as eilutę/eilutes aukštyn/žemyn</li>
-        <li>ALT SHIFT arrowUp/arrowDown - kopijuoja pažymėtą/as eilutę/eilutes aukštyn/žemyn</li>
+        <li>ALT/Option SHIFT arrowUp/arrowDown - kopijuoja pažymėtą/as eilutę/eilutes aukštyn/žemyn</li>
         <li>CTRL / - Sukuria komentarą pažymėtose eilutėse</li>
         <li>ALT SHIFT F - Automatinis formatavimas</li>
         <li>CTRL -> / CTRL <- - kursorius peršoka per visą žodį</li>
@@ -52,6 +52,7 @@
         <li>CTRL HOME / CTRL END - nukelia į failo pradžią/galą</li>
         <li>WINDOW E - atidaro failų naršyklę (File Explorer)</li>
         <li>WINDOW R - atidaro run'ą (procesų paleidimo langą)</li>
+        <li>(dešinysis)ALT - leidžia rašyti kita kalba (kol nuspaustas)</li>
       </ol>
     </section>
     <section class=""> <!-- kartojimas -->
