--- a/HTML ir CSS/06 paskaita - 02.21 - Lentelės/index.html
+++ b/HTML ir CSS/06 paskaita - 02.21 - Lentelės/index.html
@@ -29,11 +29,12 @@
           <li>tr - lentelės eilutė (table row)</li>
           <li>td - lentelės duomuo (table data)</li>
           <li>th - lentelės stulpelio antraštė (table heading)</li>
-          <li>caption - lentelės pavadinimas</li>
-          <li>colgroup - stulpelių grupė</li>
-          <li>col - stulpelis</li>
+          <li>caption - lentelės pavadinimas</li> <!-- nenaudojamas -->
+          <li>colgroup - stulpelių grupė</li> <!-- nenaudojamas -->
+          <li>col - stulpelis</li> <!-- nenaudojamas -->
         </ul>
       </div>
+      <hr>
       <div> <!-- pavyzdinė lentelė -->
         <!-- <h1>Lentelė</h1> -->
         <table class="pavyzdineLentele">
@@ -80,8 +81,107 @@
           </tfoot>
         </table>
       </div>
+      <hr>
+      <div> <!-- užduotis 1 -->
+        <table>
+          <thead>
+            <tr>
+              <th>No.</th>
+              <th>Full Name</th>
+              <th>Position</th>
+              <th>Salary</th>
+              <th>Type</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr> <!-- pirma eilute -->
+              <td class="textCenter">1</td>
+              <td>Very long name</td>
+              <td>Pos</td>
+              <td>Sal</td>
+              <td rowspan="4">Company Founder</td>
+            </tr>
+            <tr> <!-- antra eilute -->
+              <td class="textCenter">2</td>
+              <td>Name</td>
+              <td>Pos</td>
+              <td>Sal</td>
+            </tr>
+            <tr> <!-- trecia eilute -->
+              <td class="textCenter">3</td>
+              <td>Name</td>
+              <td>Pos</td>
+              <td>Sal</td>
+            </tr>
+            <tr> <!-- ketvirta eilute -->
+              <td class="textCenter">4</td>
+              <td>Name</td>
+              <td>Pos</td>
+              <td>Sal</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <td colspan="3" class="textCenter">Total exp:</td>
+            <td>number</td>
+          </tfoot>
+        </table>
+      </div>
+      <hr>
+      <div> <!-- CSS Selectors -->
+        <h1>CSS Selectors</h1>
+        <ul>
+          <li>element - elemento - pvz.: p</li>
+          <li>class - klasės - pvz.: .className</li>
+          <li>id - id - pvz.: #ID_Name</li>
+          <li>everything - visko - pvz.: *</li>
+          <li>multiple - daugelio elementų - pvz.: div, .pavadinimas</li>
+          <li>???? - elementai elemento viduje - pvz.: div p</li>
+          <li>???? - vaikiniai elemento elementai - pvz.: div > p</li>
+          <li>???? - elementas su klase/id arba klasėmis/id - pvz.: div.hihi.haha#idVardas</li>
+          <li>next element - elementas einantis už elemento - pvz.: input + label</li>
+          <li>next elements - elementai einantys už elemento - pvz.: input ~ label</li>
+        </ul>
+      </div>
     </section>
+
+    <div>
+      <input type="checkbox" id="sitas" style="display: none">
+      <label for="sitas">labas1</label>
+      <label for="sitas">labas2</label>
+      <label for="sitas">labas3</label>
+      <label for="sitas">labas4</label>
+    </div>
+
+    <div class="hihi haha">
+      <p>div > p</p>
+      <span>
+        <p>div > span > p</p>
+        <section class="cia">
+          <p>div section > p</p>
+        </section>
+      </span>
+    </div>
+    <section>
+      <div class="hihi haha extra" id="idVardas">
+        <p>labas</p>
+      </div>
+      <p>kitas</p>
+    </section>
+    <p>ne viduje div'o</p>
+
+    <section class="korteles">
+      <div>
+        <h1>labas</h1>
+        <div>
+          <img src="" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem illum saepe veniam at ullam sequi fugiat ipsa. Vitae, aut ipsum!</p>
+        </div>
+      </div>
+      <div></div>
+    </section>
+
   </main>
+
 </body>
 
 </html>
