--- a/HTML ir CSS/06 paskaita - 02.21 - Lentelės/index.html
+++ b/HTML ir CSS/06 paskaita - 02.21 - Lentelės/index.html
@@ -82,7 +82,8 @@
         </table>
       </div>
       <hr>
-      <div> <!-- užduotis 1 -->
+      <div class="task1"> <!-- užduotis 1 -->
+        <h1>Labas rytas</h1>
         <table>
           <thead>
             <tr>
@@ -135,9 +136,9 @@
           <li>id - id - pvz.: #ID_Name</li>
           <li>everything - visko - pvz.: *</li>
           <li>multiple - daugelio elementų - pvz.: div, .pavadinimas</li>
-          <li>???? - elementai elemento viduje - pvz.: div p</li>
-          <li>???? - vaikiniai elemento elementai - pvz.: div > p</li>
-          <li>???? - elementas su klase/id arba klasėmis/id - pvz.: div.hihi.haha#idVardas</li>
+          <li>inside - elementai elemento viduje - pvz.: div p</li>
+          <li>children - vaikiniai elemento elementai - pvz.: div > p</li>
+          <li>element with class - elementas su klase/id arba klasėmis/id - pvz.: div.hihi.haha#idVardas</li>
           <li>next element - elementas einantis už elemento - pvz.: input + label</li>
           <li>next elements - elementai einantys už elemento - pvz.: input ~ label</li>
         </ul>
@@ -161,6 +162,7 @@
         </section>
       </span>
     </div>
+
     <section>
       <div class="hihi haha extra" id="idVardas">
         <p>labas</p>
@@ -181,7 +183,5 @@
     </section>
 
   </main>
-
 </body>
-
 </html>
