06 paskaita - task2 completed

--- a/HTML ir CSS/06 paskaita - 02.21 - Lentelės/index.html
+++ b/HTML ir CSS/06 paskaita - 02.21 - Lentelės/index.html
@@ -143,6 +143,63 @@
           <li>next elements - elementai einantys už elemento - pvz.: input ~ label</li>
         </ul>
       </div>
+      <div class="task2">
+        <h1>Promotion Plans</h1>
+        <table>
+          <thead>
+            <tr>
+              <th class="whiteBg">compare</th>
+              <th class="orangeBg">start</th>
+              <th class="redBg">adv</th>
+              <th class="blueBg">ent</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>price</td>
+              <td>st</td>
+              <td>adv</td>
+              <td>ent</td>
+            </tr>
+            <tr>
+              <td>price</td>
+              <td class="bigTdText">st</td>
+              <td class="bigTdText">adv</td>
+              <td class="bigTdText">ent</td>
+            </tr>
+            <tr>
+              <td>price</td>
+              <td>st</td>
+              <td>adv</td>
+              <td>ent</td>
+            </tr>
+            <tr>
+              <td>price</td>
+              <td>st</td>
+              <td class="bigTdText">&check;</td>
+              <td class="bigTdText">&check;</td>
+            </tr>
+            <tr>
+              <td>price</td>
+              <td>st</td>
+              <td class="bigTdText">&check;</td>
+              <td class="bigTdText">&check;</td>
+            </tr>
+            <tr>
+              <td>price</td>
+              <td>st</td>
+              <td>adv</td>
+              <td>ent</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <td></td>
+            <td><button>Buy Now</button></td>
+            <td><button>Buy Now</button></td>
+            <td><button>Buy Now</button></td>
+          </tfoot>
+        </table>
+      </div>
     </section>
 
     <div>
