07 paskaita - tasks2 ats

--- a/HTML ir CSS/07 paskaita - 02.22 - Formos ir Selektoriai/index.html
+++ b/HTML ir CSS/07 paskaita - 02.22 - Formos ir Selektoriai/index.html
@@ -112,6 +112,58 @@
           </div>
         </form>
       </div>
+      <div class="task2">
+        <form>
+          <div>
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name" placeholder="your name">
+          </div>
+          <div>
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" placeholder="your email">
+          </div>
+          <div>
+            <div></div><div></div>
+          </div>
+          <div>
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password">
+          </div>
+          <div>
+            <label for="phone">Phone Number:</label>
+            <input type="tel" name="phone" id="phone">
+          </div>
+          <div>
+            <label for="male">Gender:</label>
+            <label for="male">Male:</label>
+            <input type="radio" name="gender" id="male" value="male">
+            <label for="female">Female:</label>
+            <input type="radio" name="gender" id="female" value="female">
+            <label for="other">Other:</label>
+            <input type="radio" name="gender" id="other" value="other">
+          </div>
+          <div>
+            <label for="language">Language:</label>
+            <select name="language" id="language">
+              <option disabled selected>Select language</option>
+              <option value="LT">LT</option>
+              <option value="EN">EN</option>
+              <option value="LV">LV</option>
+              <option value="SW">SW</option>
+              <option value="GB">GB</option>
+            </select>
+          </div>
+          <div>
+            <label for="zipCode">Zip Code:</label>
+            <input type="text" name="zipCode" id="zipCode">
+          </div>
+          <div>
+            <label for="about">About:</label>
+            <textarea name="about" id="about" placeholder="Write about yourself..."></textarea>
+          </div>
+          <input type="submit" value="Register">
+        </form>
+      </div>
     </section>
   </main>
 </body>
