08 paskaita - task1 ats

--- a/HTML ir CSS/08 paskaita - 02.23 - Displays, Colors, Positions, Selectors/index.html
+++ b/HTML ir CSS/08 paskaita - 02.23 - Displays, Colors, Positions, Selectors/index.html
@@ -116,6 +116,30 @@
     <section> <!-- Selectors -->
 
     </section>
+    <section> <!-- užduotys -->
+      <div class="task1"> <!-- task1 -->
+        <div>
+          <h1>LT</h1>
+          <div class="veliava lt">
+            <div class="yellowBg"></div>
+            <div class="greenBg"></div>
+            <div class="redBg"></div>
+          </div>
+        </div>
+        <div>
+          <h1>FR</h1>
+          <div class="veliava fr">
+            <div class="inline-block blueBg"></div>
+            <div class="inline-block whiteBg"></div>
+            <div class="inline-block redBg"></div>
+          </div>
+        </div>
+        <div>
+          <h1>BE</h1>
+          <div class="veliava be"></div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
