08 paskaita - menu scroll fix

--- a/HTML ir CSS/08 paskaita - 02.23 - Displays, Colors, Positions, Selectors/index.html
+++ b/HTML ir CSS/08 paskaita - 02.23 - Displays, Colors, Positions, Selectors/index.html
@@ -21,6 +21,7 @@
   </header>
   <main>
     <section id="displays" class=""> <!-- Displays -->
+      <!-- <div class="menuHelper" id="displays"></div> -->
       <h1>Displays</h1>
       <ul>
         <li>inline</li>
@@ -65,6 +66,7 @@
       </div>
     </section>
     <section id="colors" class=""> <!-- Colors -->
+      <!-- <div class="menuHelper" id="colors"></div> -->
       <h1>Colors</h1>
       <ul>
         <li>color name - 140 skirtingų spalvų</li>
