09 paskaita - flex task1 ats

--- a/HTML ir CSS/09 paskaita - 02.24 - Flex ir Grid displays/index.html
+++ b/HTML ir CSS/09 paskaita - 02.24 - Flex ir Grid displays/index.html
@@ -102,6 +102,38 @@
     <section id="selectors"> <!-- selectors maybe -->
       <div class="tallEmpty"></div>
     </section>
+    <section id="task2">
+      <div>
+        <div class="speakersText">
+          <h1>Our<br>Speakers</h1>
+          <p>Hear from people who made the magic happen.</p>
+        </div>
+        <div class="speakersPeople">
+          <img src="./images/speaker1.PNG" alt="profile pick">
+          <div>
+            <h2>Name Surname</h2>
+            <p>Work</p>
+            <p>Workplace</p>
+          </div>
+        </div>
+        <div class="speakersPeople">
+          <img src="./images/speaker2.PNG" alt="profile pick">
+          <div>
+            <h2>Name Surname</h2>
+            <p>Work</p>
+            <p>Workplace</p>
+          </div>
+        </div>
+        <div class="speakersPeople">
+          <div class="speakerPhoto3"></div>
+          <div>
+            <h2>Name Surname</h2>
+            <p>Work</p>
+            <p>Workplace</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
