--- a/HTML ir CSS/10 paskaita - 02.27 - Display Grid/index.html
+++ b/HTML ir CSS/10 paskaita - 02.27 - Display Grid/index.html
@@ -71,6 +71,18 @@
       <div>6</div>
       <div>7</div>
     </section>
+    <section id="flexInFlex">
+      <div class="black">
+        <div class="red1">1</div>
+        <div class="red2">
+          <div class="green1">2</div>
+          <div class="green2">
+            <div class="yellow">3</div>
+            <div class="yellow">4</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
