11 paskaita - Grid ir Flex praktika

--- a/HTML ir CSS/11 paskaita - 02.28 - Grid ir Flex praktika/index.html
+++ b/HTML ir CSS/11 paskaita - 02.28 - Grid ir Flex praktika/index.html
@@ -8,6 +8,28 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  
+  <header> <!-- flex -->
+    <h1>as</h1>
+    <nav>
+      <ul>
+        <li><a href="">as</a></li>
+        <li><a href="">as</a></li>
+        <li><a href="">as</a></li>
+        <li><a href="">as</a></li>
+        <li><a href="">as</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <div>
+        <div>kaire</div>
+        <div>desineje</div>
+      </div>
+    </section>
+    <section></section>
+    <section></section>
+  </main>
+  <footer></footer>
 </body>
 </html>
