13 paskaita - Responsive CSS

--- a/HTML ir CSS/13 paskaita - 03.02 - Tranzicijos, Animacijos, Responsiveness MobileFirst principu/index.html
+++ b/HTML ir CSS/13 paskaita - 03.02 - Tranzicijos, Animacijos, Responsiveness MobileFirst principu/index.html
@@ -8,7 +8,18 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  <header></header>
+  <header>
+    <div>img</div>
+    <nav>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+      </ul>
+    </nav>
+  </header>
   <main>
     <section id="tranzicija">
       <h1>Transition</h1>
@@ -49,9 +60,9 @@
       </p>
       <div class="animationPvz">
         <div>Animate ME!</div>
+        <img src="./images/marvel1.png" alt="ant man">
       </div>
     </section>
-    <div class="helperTall"></div>
     <section>
       <h1>Transform</h1>
       <ul>
@@ -60,6 +71,15 @@
         <li>scale - dydžio kitimas (matavimo vienetai skaičiais (tarsi dauginti))</li>
         <li>skew - iškraipo elementą (tarsi tampytų už kampų) (matavimo vienetai laipsniai(deg/rad))</li>
       </ul>
+    </section>
+    <section id="responsive">
+      <h1>Responsive CSS and MobileFirst principais</h1>
+      <p>
+        Responsive CSS'as rašomas @media ribose.
+      </p>
+      <p>
+        Mobile first principas, nes lengviau nuo mažo ekrano judėti link didelio IR mobiliųjų vartotojų yra daugiau ir jų kiekis auga sparčiau.
+      </p>
     </section>
   </main>
 </body>
