--- a/HTML ir CSS/14 paskaita - 03.03 - Praktika su Responsive Design/index.html
+++ b/HTML ir CSS/14 paskaita - 03.03 - Praktika su Responsive Design/index.html
@@ -28,7 +28,24 @@
         <p class="rem">rem</p>
         <p class="em">em</p>
       </section>
-      <section></section>
+      <section id="simpleResponsiveLayout">
+        <div class="sidebar"></div>
+        <div class="header"></div>
+        <div class="hero"></div>
+        <div class="about1"></div>
+        <div class="about2"></div>
+        <div class="photoAndStuff1"></div>
+        <div class="photoAndStuff2"></div>
+        <div class="photoAndStuff3"></div>
+        <div class="photoAndStuff4"></div>
+        <div class="photoAndStuff5"></div>
+        <div class="photoAndStuff6"></div>
+        <div class="photoAndStuff7"></div>
+        <div class="photoAndStuff8"></div>
+        <div class="photoAndStuff9"></div>
+        <div class="photoAndStuff10"></div>
+        <div class="footer"></div>
+      </section>
       <section></section>
       <section></section>
     </div>
