--- a/HTML ir CSS/14 paskaita - 03.03 - Praktika su Responsive Design/index.html
+++ b/HTML ir CSS/14 paskaita - 03.03 - Praktika su Responsive Design/index.html
@@ -46,7 +46,9 @@
         <div class="photoAndStuff10"></div>
         <div class="footer"></div>
       </section>
-      <section></section>
+      <section id="imgPvz">
+        <img src="./images/responsiveDesign1.jpg" alt="">
+      </section>
       <section></section>
     </div>
   </main>
