--- a/HTML ir CSS/15 paskaita - 03.06 - Likusios CSS temos/index.html
+++ b/HTML ir CSS/15 paskaita - 03.06 - Likusios CSS temos/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Temos</title>
   <link rel="stylesheet" href="styles/main.css">
+  <script></script>
 </head>
 <body>
   <main>
@@ -52,7 +53,11 @@
       </p>
     </section>
     <section id="preprocessors">
-
+      <h1>SASS/SCSS</h1>
+      <p>
+        Suteikia galimybę rašyti CSS'ą naujoviškesniu būdu, kur galima lengvai kurti ir naudoti <span>kintamuosius, nest'inti, rašyti: sąlygas | ciklus | funkcijas | mix'inus ir t.t.</span><br>
+        Naudojant kažkurį CSS preprocesorių, reikia parašytą kodą konvertuoti į paprastą CSS, kurį supranta svetainė.
+      </p>
     </section>
   </main>
 </body>
