--- a/HTML ir CSS/15 paskaita - 03.06 - Likusios CSS temos/index.html
+++ b/HTML ir CSS/15 paskaita - 03.06 - Likusios CSS temos/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Temos</title>
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="styles/main.css">
   <script></script>
 </head>
@@ -59,6 +60,55 @@
         Naudojant kažkurį CSS preprocesorių, reikia parašytą kodą konvertuoti į paprastą CSS, kurį supranta svetainė.
       </p>
     </section>
+    <section id="CSS_frameworks">
+      <h1>CSS Frameworks</h1>
+      <ul>
+        <li>Bootstrap</li>
+        <li>Tailwind</li>
+        <li>Bulma</li>
+        <li>UI Kit</li>
+        <li>Materialize</li>
+        <li>Milligram</li>
+        <li>Foundation</li>
+        <li>...</li>
+      </ul>
+      <div>
+        <div>
+          <h2>Pros</h2>
+          <ul>
+            <li>Nereikia/labai mažai rašyti CSS</li>
+            <li>Pagreitina darbą</li>
+            <li>Lengva naudotis</li>
+            <li>Suprogramuoti responsiveness</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Cons</h2>
+          <li>Daug perteklinio/nepanaudoto kodo</li>
+          <li>Neunikalus dizainas</li>
+          <li>Reikia skirti laiko išmokti naudotis</li>
+          <li>Prastenis google paieškos sistemos įvertinimas</li>
+        </div>
+      </div>
+      <p>
+        CSS Framework - kažkieno kito parašytas CSS kodas, kurį tu gali naudoti.<br>
+        Norint naudotis framework'u, reikia jį prijungti prie savo kodo naudojant CDN.<br>
+        Dauguma framework'ų veikia suteikiant jų aprašytas klases kažkokiems HTML elementams.<br>
+        Yra <a href="https://github.com/dbohdan/classless-css" target="_blank">Classless</a> CSS framework'ų. Juos naudojant, nereikia suteikti HTML elementams klasių. Viskas aprašyta naudojant tag'ų/Atributų/Nth'ų... selektorius.
+      </p>
+      <div class="container border">
+        <div class="row">
+          <div class="border col-md-12 col-lg-4">12/12 md | 4/12 lg</div>
+          <div class="border col-md-12 col-lg-4">12/12 md | 4/12 lg</div>
+          <div class="border col-md-12 col-xl-6">12/12 md | 6/12 xl</div>
+        </div>
+        <div class="row">
+          <div class="border col-md-12 col-lg-6">12/12 md | 6/12 lg</div>
+          <div class="border col-md-12 col-lg-6">12/12 md | 6/12 lg</div>
+        </div>
+      </div>
+    </section>
+    <br><br><br><br><br><br><br><br><br><br>
   </main>
 </body>
 </html>
