--- a/JavaScript/20 paskaita - 03.13 - Kartojimas ir Ciklai/index.html
+++ b/JavaScript/20 paskaita - 03.13 - Kartojimas ir Ciklai/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kartojimas ir Ciklai</title>
-  <script src="./scripts/main.js" defer></script>
-  <!-- <script src="./scripts/uzd1.js" defer></script> -->
+  <script src="./scripts/ciklai.js" defer></script>
+  <!-- <script src="./scripts/kartojimas.js" defer></script> -->
   <!-- <script src="./scripts/uzd2.js" defer></script> -->
   <!-- <script src="./scripts/uzd3.js" defer></script> -->
 </head>
