23 paskaita - daugiau užduočių

--- a/JavaScript/23 paskaita - 03.16 - JS Formų valdymas/index.html
+++ b/JavaScript/23 paskaita - 03.16 - JS Formų valdymas/index.html
@@ -43,6 +43,7 @@
           id="antrasSudetiesDomuo" 
           placeholder="antrasDomuo..."
         >
+        &Sqrt;
         <input type="submit" value="=">
         <span id="sudetiesAts"></span>
       </form>
