23 paskaita - update on sum function

--- a/JavaScript/23 paskaita - 03.16 - JS Formų valdymas/index.html
+++ b/JavaScript/23 paskaita - 03.16 - JS Formų valdymas/index.html
@@ -36,14 +36,13 @@
           id="pirmasSudetiesDomuo" 
           placeholder="pirmasDomuo..."
         >
-        <span> + </span>
+        <span id="spanas"> + </span>
         <input 
           type="number"
           name="antrasSudetiesDomuo" 
           id="antrasSudetiesDomuo" 
           placeholder="antrasDomuo..."
         >
-        &Sqrt;
         <input type="submit" value="=">
         <span id="sudetiesAts"></span>
       </form>
