25 paskaita - užduočių aptarimas

--- a/JavaScript/25 paskaita - 03.20 - JS DOM manipuliavimo praktika/index.html
+++ b/JavaScript/25 paskaita - 03.20 - JS DOM manipuliavimo praktika/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>25 paskaita - JS DOM manipuliavimo praktika</title>
   <link rel="stylesheet" href="styles/main.css">
+  <script src="./scripts/data.js" defer></script>
   <script src="./scripts/dataKartu.js" defer></script>
   <script src="./scripts/main.js" defer></script>
 </head>
@@ -71,9 +72,15 @@
     <section id="kartu2"></section>
 
 
-    <section id="task1"></section>
-    <section id="task2"></section>
-    <section id="task3"></section>
+    <section id="task1">
+      <h1>Hihi haha labas rytas</h1>
+    </section>
+    <section id="task2">
+      <h1>Hihi haha labas rytas</h1>
+    </section>
+    <section id="task3">
+      <h1>Hihi haha labas rytas</h1>
+    </section>
   </main>
 </body>
 </html>
