26 paskaita - Metodai update

--- a/JavaScript/26 paskaita - 03.21 - Primityvių duomenų tipų metodai/index.html
+++ b/JavaScript/26 paskaita - 03.21 - Primityvių duomenų tipų metodai/index.html
@@ -42,6 +42,7 @@
       <h3>Methods:</h3>
       <ul>
         <li>Number.isInteger()</li>
+        <li>Number.NaN()</li>
         <li>Number.parseInt()</li>
         <li>Number.parseFloat()</li>
         <li>.toFixed()</li>
