--- a/JavaScript/27 paskaita - 03.22 - Masyvų neiteraciniai metodai/index.html
+++ b/JavaScript/27 paskaita - 03.22 - Masyvų neiteraciniai metodai/index.html
@@ -43,6 +43,45 @@
         <li>.toString()</li>
       </ul>
     </section>
+    <section id="funkcijos">
+      <h1>Funkcijos</h1>
+      <div>
+        <p>
+          Apsirašai funkciją: function f_Vardas(param1, param2){ veiksmai... }
+        </p>
+        <p>
+          Išsikvieti funkciją: f_Vardas(arg1, arg2);
+        </p>
+        <h3>Parametrai ir Argumentai</h3>
+        <p>
+          Parametrai yra duomenys, kuriuos funkcija priima ir naudoja savo viduje.
+        </p>
+        <p>
+          Argumentai yra duomenys, kurie yra perduodami funkcijai, jos kvietimo metu.
+        </p>
+        <img src="./images/argsVsParams.png" alt="params vs args" width="500px" height="auto">
+      </div>
+      <h1>Callback</h1>
+      <p>
+        Kai funkcija ar metodas kreipiasi į kitą funkciją.
+      </p>
+      <h1>Arrow function (lambda)</h1>
+      <div>
+        <p>
+          Naujoviškesnis funkcijos aprašymo būdas išėjęs kartu su EcmaScript6.
+        </p>
+        <p>
+          Norint sukurti vardinę arrow funkciją, reikia - susikurti kintamąjį, kuriam prilygini bevardę arrow funkciją.
+        </p>
+        <p>
+          Bevardė arrow funkcija užsirašo: 
+          1) (par1, par2, par3) => { veiksmai... }
+          2) parametras => { veiksmai... }
+          3) parametras => veiksmas;
+        </p>
+      </div>
+    </section>
+    <button>Paspausk!</button>
   </main>
 </body>
 </html>
