28 paskaita - conditions ir destruktūrizavimas

--- a/JavaScript/28 paskaita - 03.23 - Masyvų iteraciniai metodai IR destructuring IR conditions/index.html
+++ b/JavaScript/28 paskaita - 03.23 - Masyvų iteraciniai metodai IR destructuring IR conditions/index.html
@@ -124,10 +124,21 @@
       </section>
 
       <section id="imantriuSalygu">
-        
+        <h1>Ternary ( ?: )</h1>
+        <p>
+          Sąlygos užrašymo būdas, kur sąlyga rašoma be jokio if'o, o už jos rašomas '?' ženklas, po kurio aprašomas 'true' atvejis, po kurio rašomas ':', po kurio rašomas else atvejis. Else atvejis gali būti papildoma sąlyga, už kurios vėl atkartojama ternary seka.
+        </p>
+
+        <h1>Logical AND (&&)</h1>
+        <p>
+          Sąlygos užrašymo būdas, kur sąlyga rašoma be jokio if'o, o už jos rašomas '&&' ženklas, po kurio rašomas 'true' atvejis. Šitas būdas neturi else'o ar elseIf'ų.
+        </p>
       </section>
       <section id="destrukturizavimas">
-
+        <h1>Destruktūrizavimas</h1>
+        <p>
+          Elemento/ų reikšmių išskirstymas dalimis.
+        </p>
       </section>
     </main>
 </body>
