29 paskaita - how to

--- a/JavaScript/29 paskaita - 03.24 - Metodų praktika/index.html
+++ b/JavaScript/29 paskaita - 03.24 - Metodų praktika/index.html
@@ -8,6 +8,11 @@
   <script src="./scripts/main.js" defer></script>
 </head>
 <body>
-  
+  <form id="test">
+    <input type="text" value="Rokas" name="name" id="name" placeholder="Vardas">
+    <input type="text" value="Banaitis" name="surname" id="surname" placeholder="Pavardė">
+    <input type="number" value="26" name="age" id="age" placeholder="Amžius">
+    <input type="submit" value="Pateikti">
+  </form>
 </body>
 </html>
