--- a/JavaScript/30 paskaita - 03.27 - Git ir Github IR Klasės/index.html
+++ b/JavaScript/30 paskaita - 03.27 - Git ir Github IR Klasės/index.html
@@ -34,11 +34,45 @@
       <div id="git">
         <a href="https://git-scm.com" target="_blank">Nuoroda į Git</a>
         <h1>Git Komandos</h1>
-        <li>init - sukuria git'o repozitoriją</li>
-        <li>add nurodytiFailai - pridėti koreguotus/naujus failus/aplankalus prie paruoštų failų kodo versijos kūrimui (commit'ui)</li>
-        <li>commit -m - iš paruoštų (staged) failų/aplankalų sukuriama kodo versija su atitinkama žinute (message (-m)), nusakančia kas toje kodo versijoje pakito</li>
-        
+        <ul>
+          <li>git init - sukuria git'o repozitoriją</li>
+          <li>git add nurodytiFailai - pridėti koreguotus/naujus failus/aplankalus prie paruoštų failų kodo versijos kūrimui (commit'ui)</li>
+          <li>git commit -m - iš paruoštų (staged) failų/aplankalų sukuriama kodo versija su atitinkama žinute (message (-m)), nusakančia kas toje kodo versijoje pakito</li>
+          <li>git status - grąžina informacija apie dabartinės kodo versijos būklę (statusą)</li>
+          <li>git push - nusiunčia commit'us į išorinę repozitoriją (gitHub'ą)</li>
+          <li>git pull - atsiunčia commit'us iš išorinės repozitorijos (gitHub'o)</li>
+        </ul>
+        <h1>Git konfiguracijos</h1>
+        <ul>
+          <li>git config --global user.name "Tavo GitHub paskyros vardas"</li>
+          <li>git config --global user.email "PrivaluTasPastasKuriuoKureiGitHubPaskyra@gmail.com"</li>
+          <li>git config --global core.editor "code"</li>
+          <li>git config --global core.autocrlf true (vietoje "true" rašyti "input" jeigu linux/mac)</li>
+          <li>git config --global -e</li>
+          <li>git config --help</li>
+        </ul>
       </div>
+    </section>
+    <section id="klases">
+      <h1>Klasės (Class)</h1>
+      <p>
+        Klasės yra skirtos generuoti naujus objektus.
+      </p>
+      <p>
+        Klasė yra objektų kūrimo šablonas.<br>
+        Klasė privalo būti aprašyta prieš kreipiantis į ją.<br>
+        Klasės rašomos iš didžiosios reidės.<br>
+        Klasės konstruktoriuje privalo būti "this".
+      </p>
+
+      <h2>Object Orientated Programming principai</h2>
+      <ul>
+        <li>Paveldėjimas</li>
+        <li>Polimorfizmas</li>
+        <li>Abstrakcija</li>
+        <li>Inkapsuliacija</li>
+      </ul>
+
     </section>
   </main>
 </body>
