--- a/JavaScript/31 paskaita - 03.28 - Klasės/index.html
+++ b/JavaScript/31 paskaita - 03.28 - Klasės/index.html
@@ -5,9 +5,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Klasės</title>
+  <link rel="stylesheet" href="styles/main.css">
   <script src="./scripts/main.js" defer></script>
 </head>
 <body>
-  
+  <main>
+    <section id="newCards">
+      <form></form>
+    </section>
+    <section id="cars">
+      <h1>All the cars in our garage</h1>
+      <div id="allCars">
+        <!-- <div class="car">
+  <h1>Marke Modelis</h1>
+  <img src="https://content-images.carmax.com/qeontfmijmzv/MY19MKj0XutK084z874jt/9632621fd8464b5c0e54a9dee64ad4e5/tesla.jpg" alt="auto">
+  <div class="carSpecs">
+    <div>
+      <p>Metai</p>
+      <p>Variklis</p>
+      <p>Spalva</p>
+    </div>
+    <div>
+      <p>Kaina</p>
+    </div>
+  </div>
+</div> -->
+      </div>
+    </section>
+  </main>
 </body>
 </html>
+
