--- a/JavaScript/32 paskaita - 03.29 - Moduliai ir Komponentai/index.html
+++ b/JavaScript/32 paskaita - 03.29 - Moduliai ir Komponentai/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moduliai ir Komponentai</title>
+  <link rel="stylesheet" href="./styles/main.css">
   <script src="./scripts/main.js" type="module"></script>
 </head>
 <body>
@@ -30,7 +31,20 @@
     </section>
     <section id="komponentai">
       <h1>Komponentai (ne React)</h1>
-      
+      <p>
+        Komponentas - puslapio sudedamoji dalis.
+      </p>
+    </section>
+    <section id="test">
+      <div class="card">
+        <img src="https://assets2.cbsnewsstatic.com/hub/i/r/2012/02/06/1feb5e95-a644-11e2-a3f0-029118418759/thumbnail/1200x630/64a9aba33675cad48043257194ebc838/breading-cats-q013.jpg" alt="cat ale bread">
+        <div>
+          <h1>Pavadinimas</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas nesciunt obcaecati non praesentium quasi delectus vel dolor facere distinctio quia!
+          </p>
+        </div>
+      </div>
     </section>
   </main>
 </body>
