--- a/JavaScript/32 paskaita - 03.29 - Moduliai ir Komponentai/index.html
+++ b/JavaScript/32 paskaita - 03.29 - Moduliai ir Komponentai/index.html
@@ -36,7 +36,7 @@
       </p>
     </section>
     <section id="test">
-      <div class="card">
+      <!-- <div class="card">
         <img src="https://assets2.cbsnewsstatic.com/hub/i/r/2012/02/06/1feb5e95-a644-11e2-a3f0-029118418759/thumbnail/1200x630/64a9aba33675cad48043257194ebc838/breading-cats-q013.jpg" alt="cat ale bread">
         <div>
           <h1>Pavadinimas</h1>
@@ -44,7 +44,14 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas nesciunt obcaecati non praesentium quasi delectus vel dolor facere distinctio quia!
           </p>
         </div>
-      </div>
+      </div> -->
+      <!-- <ol class="vienaKlase kitaKlase">
+        <li class="liKlase">Pirmas</li>
+        <li class="liKlase">Antras</li>
+        <li class="liKlase unikaliKlase">Ne Pirmas</li>
+        <li class="liKlase">Kažkelintas</li>
+        <li class="liKlase">Paskutinis maybe</li>
+      </ol> -->
     </section>
   </main>
 </body>
