33 paskaita - DOM Elements

--- a/JavaScript/33 paskaita - 03.30 - Duomenų saugojimas vartotojo dalyje/index.html
+++ b/JavaScript/33 paskaita - 03.30 - Duomenų saugojimas vartotojo dalyje/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Local / Session Storage ir Cookies</title>
   <script src="./scripts/main.js" type="module"></script>
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
   <main>
@@ -43,7 +44,7 @@
       </p>
     </section>
     <section id="nodeElements">
-
+      <h1>Node Elementai</h1>
     </section>
   </main>
 </body>
